appId: com.anonymous.expo-user-management # This is an example app id. Replace it with your app id.
---
- launchApp
- assertVisible: 'Authentication'
- tapOn: 'email'
- inputText: "annanazarenko1234@gmail.com"
- tapOn: 'password'
- inputText: "Password1!"
- tapOn: 'Log In'